tests/NormalTests/paczka1/fuzzy1/51847735.err
Error in line 5: k7BoXMms S337 142,25
Error in line 3: A867 S337 77,8
Error in line 11: 5aq8 S250 87,12
Error in line 13: A867 S337 98,3
Error in line 14: A867 A867 8,8
Error in line 17: k7BoXMms A867 73,80
Error in line 23: zQHNj8R S337 26,#
Error in line 27: znczFkY1mS25062,8
Error in line 26: ooP09kRur S316 90,4
Error in line 25: POW S316 83,1
Error in line 28: ooP09kRur S337 33,5
Error in line 31: k7BoXMms S337 29,4
Error in line 39: zQHNj8R S337 422,7
